<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IntelligenceTransSystem</string>
    <string name="action_settings">Settings</string>
    <string name="btn_city_location">%1$s</string>
    <string name="btn_query_route">线路</string>
    <string name="btn_query_site">站点</string>
    <string name="btn_query_change">换乘</string>
    <string name="btn_query_nearby">附近</string>
    <string name="tv_example_username">李东</string>
    <string name="tv_example_user_mood">今天天气真好！！啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦了</string>
    <string name="btn_login_register">登陆/注册</string>

</resources>
