<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp" >

    <LinearLayout
        android:id="@+id/linelayout_top_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp" >

            <ImageView
                android:id="@+id/iv_user_headPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/unknown_user_96"/>

            <Button
                android:id="@+id/btn_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_user_headPhoto"
                android:text="@string/btn_login_register"
                android:background="@null"
                android:paddingLeft="24dp"
                android:layout_centerVertical="true"
                android:textColor="@color/ltgray" />

            <LinearLayout
                android:id="@+id/linearlayout_right_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_user_headPhoto"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/tv_usename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_example_username" />

                <TextView
                    android:id="@+id/tv_user_mood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/tv_example_user_mood" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/half_transparent_gray" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linelayout_top_user"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setting" />
    </LinearLayout>

</RelativeLayout>